// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalUserVoteItem /> should render a support item 1`] = `
<ProposalsUserVotesstyle__VoteItemContainer
  id="vote-step1-proposal1"
>
  <Col
    bsClass="col"
    componentClass="div"
    md={9}
    sm={12}
    xs={12}
  >
    <div>
      <div>
        <a
          className="proposals-user-votes__title"
          href="http://capco.test/proposal"
        >
          proposal
        </a>
        <br />
        <FormattedMessage
          id="supported.date-at-time"
          values={
            Object {
              "date": <FormattedDate
                day="numeric"
                month="long"
                value={"2014-12-31T23:00:00.000Z"}
                year="numeric"
              />,
              "time": <FormattedTime
                hour="numeric"
                minute="numeric"
                value={"2014-12-31T23:00:00.000Z"}
              />,
            }
          }
        />
      </div>
    </div>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    id="1-proposal-vote__private"
    md={2}
    sm={12}
    xs={12}
  >
    <div>
      <div
        className="toggle-group"
      >
        <Field
          component={[Function]}
          id="1-proposal-vote__private-toggle"
          label="public"
          labelSide="RIGHT"
          name="votes.1.public"
          normalize={[Function]}
          roledescription="vote-toggle-aria-roledescription"
        />
      </div>
    </div>
  </Col>
  <Col
    bsClass="col"
    className="proposal-vote__delete-container"
    componentClass="div"
    md={1}
  >
    <Popover
      disclosure={
        <ButtonQuickAction
          border="none"
          className="proposal-vote__delete"
          disabled={false}
          icon="TRASH"
          id="1-proposal-vote__private-delete"
          label="aria.label.delete-support"
          variantColor="danger"
        />
      }
      id="popover-positioned-right"
      placement="bottom"
      style={
        Object {
          "outline": "none",
        }
      }
    >
      <Component />
    </Popover>
  </Col>
</ProposalsUserVotesstyle__VoteItemContainer>
`;

exports[`<ProposalUserVoteItem /> should render a support item without createdAt 1`] = `
<ProposalsUserVotesstyle__VoteItemContainer
  id="vote-step1-proposal1"
>
  <Col
    bsClass="col"
    componentClass="div"
    md={9}
    sm={12}
    xs={12}
  >
    <div>
      <div>
        <a
          className="proposals-user-votes__title"
          href="http://capco.test/proposal"
        >
          proposal
        </a>
        <br />
        <FormattedMessage
          id="notification.subject.new-support"
          values={Object {}}
        />
      </div>
    </div>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    id="1-proposal-vote__private"
    md={2}
    sm={12}
    xs={12}
  >
    <div>
      <div
        className="toggle-group"
      >
        <Field
          component={[Function]}
          id="1-proposal-vote__private-toggle"
          label="public"
          labelSide="RIGHT"
          name="votes.1.public"
          normalize={[Function]}
          roledescription="vote-toggle-aria-roledescription"
        />
      </div>
    </div>
  </Col>
  <Col
    bsClass="col"
    className="proposal-vote__delete-container"
    componentClass="div"
    md={1}
  >
    <Popover
      disclosure={
        <ButtonQuickAction
          border="none"
          className="proposal-vote__delete"
          disabled={false}
          icon="TRASH"
          id="1-proposal-vote__private-delete"
          label="aria.label.delete-support"
          variantColor="danger"
        />
      }
      id="popover-positioned-right"
      placement="bottom"
      style={
        Object {
          "outline": "none",
        }
      }
    >
      <Component />
    </Popover>
  </Col>
</ProposalsUserVotesstyle__VoteItemContainer>
`;

exports[`<ProposalUserVoteItem /> should render a vote item 1`] = `
<ProposalsUserVotesstyle__VoteItemContainer
  id="vote-step1-proposal1"
>
  <Col
    bsClass="col"
    componentClass="div"
    md={9}
    sm={12}
    xs={12}
  >
    <div>
      <div>
        <a
          className="proposals-user-votes__title"
          href="http://capco.test/proposal"
        >
          proposal
        </a>
        <br />
        <FormattedMessage
          id="voted-on-date-at-time"
          values={
            Object {
              "date": <FormattedDate
                day="numeric"
                month="long"
                value={"2014-12-31T23:00:00.000Z"}
                year="numeric"
              />,
              "time": <FormattedTime
                hour="numeric"
                minute="numeric"
                value={"2014-12-31T23:00:00.000Z"}
              />,
            }
          }
        />
      </div>
    </div>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    id="1-proposal-vote__private"
    md={2}
    sm={12}
    xs={12}
  >
    <div>
      <div
        className="toggle-group"
      >
        <Field
          component={[Function]}
          id="1-proposal-vote__private-toggle"
          label="public"
          labelSide="RIGHT"
          name="votes.1.public"
          normalize={[Function]}
          roledescription="vote-toggle-aria-roledescription"
        />
      </div>
    </div>
  </Col>
  <Col
    bsClass="col"
    className="proposal-vote__delete-container"
    componentClass="div"
    md={1}
  >
    <Popover
      disclosure={
        <ButtonQuickAction
          border="none"
          className="proposal-vote__delete"
          disabled={false}
          icon="TRASH"
          id="1-proposal-vote__private-delete"
          label="aria-label-delete-vote"
          variantColor="danger"
        />
      }
      id="popover-positioned-right"
      placement="bottom"
      style={
        Object {
          "outline": "none",
        }
      }
    >
      <Component />
    </Popover>
  </Col>
</ProposalsUserVotesstyle__VoteItemContainer>
`;
